----------------------------------------------------------------------
 OmegaT 2.1.5 update 2
----------------------------------------------------------------------
  0 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.1.5 update 2 vs. 2.1.5 update 1

  Bug fixes:

  - Calling the Project Files window (Ctrl+L) could generate an error 
in some circumstances

----------------------------------------------------------------------
 OmegaT 2.1.5 update 1
----------------------------------------------------------------------
  1 Enhancement
  2 Bugfixes
----------------------------------------------------------------------
2.1.5 update 1 vs. 2.1.5

  Implemented requests:

  - Memorize search settings after each search
  http://sourceforge.net/support/tracker.php?aid=1605843

  Bug fixes:

  - Go To/Segment Number goes to wrong segment
  http://sourceforge.net/support/tracker.php?aid=2990761

  - User-defined font wasn't used when first opening the Search window

----------------------------------------------------------------------
 OmegaT 2.1.5
----------------------------------------------------------------------
  3 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.1.5 vs. 2.1.4 update 1

  Implemented requests:

  - Load TMXs from nested folders
  http://sourceforge.net/support/tracker.php?aid=2986574

  - Insert exact matches from TMXs in the auto folder
  http://sourceforge.net/support/tracker.php?aid=2131989

  Other enhancements:

  - Filter search results in the Editor
For explanations, see Searches in the English documentation 

  Bug fixes:

  - Insert Source Tags miss tags when source text contains <
  http://sourceforge.net/support/tracker.php?aid=2987164

----------------------------------------------------------------------
 OmegaT 2.1.4 update 1
----------------------------------------------------------------------
  6 Enhancements
  6 Bugfixes