@@ -42,6 +42,9 @@ OmegaT-Plugin: filter
 Name: org.omegat.filters2.text.ini.INIFilter
 OmegaT-Plugin: filter
 
+Name: org.omegat.filters2.text.dokuwiki.DokuWikiFilter
+OmegaT-Plugin: filter
+
 Name: org.omegat.filters3.xml.docbook.DocBookFilter
 OmegaT-Plugin: filter
 
